feat: auths API - login, register, refresh token
