# backend/src/auth/dto/create-auth.dto.ts
@@ -1,15 +1,0 @@
-import { UserRole } from '@tacohouse/shared';
-
-export class CreateAuthDto {
-  email: string;
-
-  password: string;
-
-  role: UserRole;
-
-  firstName: string;
-
-  lastName: string;
-
-  phone: string;
-}
