# backend/src/auth/dto/register-auth.dto.ts
@@ -1,1 +1,71 @@
-export class RegisterAuthDto {}
+import { UserRole } from '@tacohouse/shared';
+import { Transform, Type } from 'class-transformer';
+import {
+  IsDate,
+  IsEmail,
+  IsEnum,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+  Length,
+  Matches,
+  MaxLength,
+} from 'class-validator';
+
+export class RegisterAuthDto {
+  @IsNotEmpty()
+  @IsEmail()
+  @Transform(({ value }) => String(value).toLowerCase().trim())
+  email: string;
+
+  @IsNotEmpty()
+  @IsString()
+  @Length(6, 50)
+  @Matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)/, {
+    message:
+      'Password must contain at least 1 uppercase letter, 1 lowercase letter and 1 number',
+  })
+  password: string;
+
+  @IsNotEmpty()
+  @IsEnum(UserRole)
+  role: UserRole;
+
+  @IsNotEmpty()
+  @IsString()
+  @MaxLength(100)
+  @Transform(({ value }) => String(value).trim())
+  firstName: string;
+
+  @IsNotEmpty()
+  @IsString()
+  @MaxLength(100)
+  @Transform(({ value }) => String(value).trim())
+  lastName: string;
+
+  @IsString()
+  @MaxLength(10)
+  phone: string;
+
+  @IsOptional()
+  @IsString()
+  @MaxLength(500)
+  avatar?: string;
+
+  @IsNotEmpty()
+  @IsDate()
+  @Type(() => Date)
+  dateOfBirth: Date;
+
+  @IsNotEmpty()
+  @IsString()
+  @MaxLength(100)
+  @Transform(({ value }) => String(value).trim())
+  occupation: string;
+
+  @IsNotEmpty()
+  @IsString()
+  @MaxLength(100)
+  @Transform(({ value }) => String(value).trim())
+  workplace: string;
+}
